=== 2.9.1

* Bug fixes
  * Added license to gemspec.  Issue #47 by Benjamin Fleischer
  * Set Net::HTTP#keep_alive_timeout when supported by ruby.  Pull request #53
    by Dylan Thacker-Smith.

=== 2.9 / 2013-07-24

* Minor enhancement
  * Added Net::HTTP::Persistent#max_requests to avoid ECONNRESET for a server
    that allows a limited number of requests on a connection.  Pull request
    #42 by James Tucker.
  * Request failures are now raised with the backtrace of the original
    exception.  This gives better insight into the reason for the failure.
    See #41 by Andrew Cholakian.
  * OpenSSL is no longer required.  If OpenSSL is not available an exception
    will be raised when attempting to access HTTPS resources.  Feature request
    by André Arko

* Bug fixes
  * Explain the proper way of sending parameters depending upon the request
    method.  Issue #35 by André Arko.
  * Handle Errno::ETIMEDOUT by retrying the request.  Issue #36 by André Arko.
  * Requests retried by ruby 2.x are no longer retried by net-http-persistent.
  * Finish the connection if an otherwise unhandled exception happens during a
    request.  Bug #46 by Mark Oude Veldhuis.
  * Net::HTTP::Persistent::detect_idle_timeout now assumes a StandardError
    indicates the idle timeout has been found.  Bug #43 by James Tucker.

=== 2.8 / 2012-10-17

* Minor enhancements
  * Added Net::HTTP::Persistent::detect_idle_timeout which can be used to
    determine the idle timeout for a host.
  * The read timeout may now be updated for every request.  Issue #33 by
    Mislav Marohnić
  * Added NO_PROXY support.  Pull Request #31 by Laurence Rowe.
  * Added #cert and #key aliases for Net::HTTP compatibility.  Pull request
    #26 by dlee.
  * The artifice gem now disables SSL session reuse to prevent breakage of
    testing frameworks.  Pull Request #29 by Christopher Cooke.
  * Disabled Net::HTTP::Persistent::SSLReuse on Ruby 2+.  This feature is now
    built-in to Net::HTTP.
* Bug fixes